# drawbot-vscode-sketchbook

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_USAGE.md  LICENSE  PROJECT_STATUS.md  README.md  demo_phase_1.py  demo_phase_2.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sketchbook.py  test_phase_2_simple.py  test_phase_3_quick.py  test_phase_3_simple.py
cache/: .cache_metadata.json
docs/: README.md  code-quality-improvement-proposal.md  developer-experience-test-results.md  prd_advanced_features.md  prd_sketchbook.md  project-cleanup-assessment.md  tdd_implementation_plan.md  tdd_live_preview_implementation.md  test-plan-developer-experience.md
docs/design/: prd_advanced_features.md
docs/development/: test-plan-developer-experience.md
examples/drawbotgrid/: 01_column_grid_basic.py  02_column_grid_multiplication.py  03_row_grid.py  04_grid_combined.py  05_baseline_grid.py  06_advanced_layout.py  README.md
sketches/broken_sketch/: broken_sketch.py
sketches/colorful_art/: colorful_art.py
sketches/demo_folder_sketch/: demo_folder_sketch.py  sketch.py
sketches/demo_folder_sketch/data/: colors.json
sketches/developer_experience_test/: developer_experience_test.py
sketches/multi_page_test/: multi_page_test.py
sketches/my_first_sketch/: my_first_sketch.py
sketches/test_python/: sketch.py
sketches/test_python_1/: sketch.py
sketches/test_typography/: sketch.py
sketches/test_typography_final/: test_typography_final.py
sketches/test_typography_fixed/: test_typography_fixed.py
sketches/typography_art/: typography_art.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  drawbot_wrapper.py  file_watcher.py  image_converter.py  preview_cache.py  preview_engine.py  project_structure.py  sketch_manager.py  sketch_runner.py  thumbnail_generator.py
src/drawbot_sketchbook/: __init__.py  cli.py
src/server/: __init__.py  file_watch_integration.py  live_preview_manager.py  live_preview_server.py  security_middleware.py
src/server/static/css/: main.css
src/server/static/js/: dashboard.js  sketch-preview.js  websocket.js
src/server/templates/: base.html  dashboard.html  sketch_card.html  sketch_preview.html
templates/: generative_pattern.py  minimal_sketch.py  simple_animation.py  typography_art.py
tests/: test_drawbot_wrapper.py  test_drawbot_wrapper_pdf.py  test_drawbot_wrapper_simple.py  test_file_watch_integration.py  test_file_watcher.py  test_image_converter.py  test_live_preview_manager.py  test_live_preview_server.py  test_phase_1_integration.py  test_phase_3_integration.py  test_preview_cache.py  test_preview_engine.py  test_project_structure.py  test_security_middleware.py  test_sketch_manager.py  test_sketch_runner.py  test_sketch_runner_folders.py  test_sketch_runner_simple.py
tests/sketches/broken_sketch/: broken_sketch.py
tests/sketches/developer_experience_test/: developer_experience_test.py
tests/sketches/grid_test/: grid_test.py
tests/sketches/template_test/: template_test.py
tests/sketches/test_creation_flow/: test_creation_flow.py
tests/sketches/test_folder_sketch/: test_folder_sketch.py
tests/sketches/test_generative/: test_generative.py
tests/sketches/test_minimal/: test_minimal.py
tests/sketches/test_new_naming/: test_new_naming.py
tests/sketches/test_python/: test_python.py
tests/sketches/test_python_1/: test_python_1.py
tests/sketches/test_typography/: test_typography.py
tests/sketches/test_typography_final/: test_typography_final.py
tests/sketches/test_typography_fixed/: test_typography_fixed.py
tests/sketches/test_typography_working/: test_typography_working.py
