[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drawbot-sketchbook"
version = "0.0.1"
authors = [
  { name="Jasper Schelling", email="contact@jasperschelling.nl" },
]
description = "A creative coding environment for Python and DrawBot."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "drawbot @ git+https://github.com/typemytype/drawbot",
    "watchdog>=3.0.0",
    "pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "psutil>=5.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
]

[project.scripts]
sketchbook = "drawbot_sketchbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
